--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                     <!-- <h3>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and
                         environments.</h3> -->
                     <div id="nav-part2" style="display:flex">
-                        <h4><a href="http://127.0.0.1:8000/">AIna &#8599;</a></h4>
-                        <h4><a href="http://127.0.0.1:8000/">IntelliView &#8599;</a></h4>
-                        <h4><a href="http://127.0.0.1:8000/">IntelliVoice &#8599;</a></h4>
+                        <h4><a target="_blank" href="http://127.0.0.1:8000/">AIna &#8599;</a></h4>
+                        <h4><a target="_blank" href="http://127.0.0.1:5502/index.html">IntelliView &#8599;</a></h4>
+                        <h4><a target="_blank"  href="http://127.0.0.1:5501/index.html">IntelliVoice &#8599;</a></h4>
                     </div>
                     <h3>AIna is a deepfake detection tool which you can use to detect the ligitemacy of your videos.</h3><h3 style="color: rgb(13,81,225);"> We beat AI with AI.
                     </h3>
                 </div>
                 <div id="right">
                     <h1 style="font-family: Baskervville SC";>AIna </h1><h1>
-                        DEEPFAKE <br>
-                        DETECTION</h1>
+                        VIDEO <br>
+                        INTELLIGENCE</h1>
                 </div>
 
             </div>
