--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
                         environments.</h3> -->
                     <div id="nav-part2" style="display:flex">
                         <h4><a target="_blank" href="http://127.0.0.1:8000/">AIna &#8599;</a></h4>
-                        <h4><a target="_blank" href="http://127.0.0.1:5502/index.html">IntelliView &#8599;</a></h4>
-                        <h4><a target="_blank"  href="http://127.0.0.1:5501/index.html">IntelliVoice &#8599;</a></h4>
+                        <h4><a target="_blank" href="https://necrosyth.github.io/intelliview/">IntelliView &#8599;</a></h4>
+                        <h4><a target="_blank"  href="https://necrosyth.github.io/intellivoice/">IntelliVoice &#8599;</a></h4>
+                        <h4><a target="_blank"  href="https://aina-summarizer.vercel.app">Sumarizer &#8599;</a></h4>
                     </div>
                     <h3>AIna is a deepfake detection tool which you can use to detect the ligitemacy of your videos.</h3><h3 style="color: rgb(13,81,225);"> We beat AI with AI.
                     </h3>
